--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 					<ul>
 						<li><a href="index.html">Home</a></li>
 						<li><a href="generic.html">About&nbsp;</a></li>
-					  <li><a href="Info.html">Info</a></li>
+					  <li><a href="InfoAf.html">Ilnfo</a></li>
 						<li>&nbsp;</li>
                     </ul>
 				</nav>
